wow such move button down a little to prevent overlap

--- a/public/css/much_stylish.css
+++ b/public/css/much_stylish.css
@@ -167,6 +167,7 @@ h1, h2 {
         }
 
 .buttons {
+    margin-top: 10px;
     text-align: center;
 }
 
